# ecopower

./: Cargo.toml  LICENSE  README.md
.github/workflows/: apt-publish.yml
debian/: ecopower.desktop  postinst
src/: main.rs
