[package]
name = "ecopower"
version = "0.2.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
sysinfo = { version = "0.33", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
